; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_mesh.c_set_mesh_power.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_mesh.c_set_mesh_power.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mesh_state = type { i32 }

@powermac = common dso_local global i32 0, align 4
@PMAC_FTR_MESH_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mesh_state*, i32)* @set_mesh_power to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_mesh_power(%struct.mesh_state* %0, i32 %1) #0 {
  %3 = alloca %struct.mesh_state*, align 8
  %4 = alloca i32, align 4
  store %struct.mesh_state* %0, %struct.mesh_state** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @powermac, align 4
  %6 = call i32 @machine_is(i32 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %28

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %9
  %13 = load i32, i32* @PMAC_FTR_MESH_ENABLE, align 4
  %14 = load %struct.mesh_state*, %struct.mesh_state** %3, align 8
  %15 = getelementptr inbounds %struct.mesh_state, %struct.mesh_state* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @macio_get_of_node(i32 %16)
  %18 = call i32 @pmac_call_feature(i32 %13, i32 %17, i32 0, i32 1)
  %19 = call i32 @msleep(i32 200)
  br label %28

20:                                               ; preds = %9
  %21 = load i32, i32* @PMAC_FTR_MESH_ENABLE, align 4
  %22 = load %struct.mesh_state*, %struct.mesh_state** %3, align 8
  %23 = getelementptr inbounds %struct.mesh_state, %struct.mesh_state* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @macio_get_of_node(i32 %24)
  %26 = call i32 @pmac_call_feature(i32 %21, i32 %25, i32 0, i32 0)
  %27 = call i32 @msleep(i32 10)
  br label %28

28:                                               ; preds = %8, %20, %12
  ret void
}

declare dso_local i32 @machine_is(i32) #1

declare dso_local i32 @pmac_call_feature(i32, i32, i32, i32) #1

declare dso_local i32 @macio_get_of_node(i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
